org.mmisw.voc2rdf II 
Carlos Rueda - MMI / MBARI

ChangeLog

2008-10-23
	- Starting changes for enhanced metadata handling in the conversion:
		- new Converter which is a simplified adaptation of 
		  org.mmi.ont.MetadataBean (which was removed).
		  
		- also, new package org.mmisw.voc2rdf.transf with elements from Luis'
		  org.mmi.ont.voc2owl.trans package:
		      http://mmi.cvs.sourceforge.net/viewvc/mmi/org.mmi.ont.voc2owl/src/org/mmi/ont/voc2owl/trans/
		  as a convenient way to start doing the changes in the core conversion utility.
		  
		  Note: there are still references to elements in org.mmi.ont.voc2owl.trans, but those
		  will be removed as the code is refactored. 
		  
		  Note: 
		  The org.mmisw.voc2rdf.transf package currently kept here as part of the Voc2RDF web application, 
		  but will eventually be moved to an independent library API so it's easier to reuse (TODO).
		  
2008-10-14
	- Initial version 0.1.0